--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
     position: relative;
     padding: 20px;
     color: grey;
-    background: black;
+    background: hotpink;
     line-height: 40px;
     text-align: justify;
     font-weight: lighter;
