--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 .container {
     position: relative;
     padding: 20px;
-    color: grey;
+    color: black;
     background: hotpink;
     line-height: 40px;
     text-align: justify;
